Ndryshime ne strukture
I krijova edhe faqet e tjera

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,7 +6,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="header.css">
 </head>
-
 <body>
     <header class="header">
         <div class="logoContainer">
@@ -14,9 +13,9 @@
         </div>
 
         <nav class="navLinks">
-            <a href="">Home</a>
-            <a href="">Itineraries</a>
-            <a href="">About Us</a>
+            <a href="HomePage.html">Home</a>
+            <a href="Itineraries.html">Itineraries</a>
+            <a href="AboutUs.html">About Us</a>
         </nav>
         <div class="registerButtons">
             <button class="signIn">Sign In</button>
