Home page fixed(not final)

--- a/HomePage.html
+++ b/HomePage.html
@@ -36,6 +36,8 @@
                <span class="search-icon material-symbols-outlined">search</span>
                <input class="search-input" type="search" placeholder="Enter your destination">
             </div>
+            </form>
+        </div>
     </section>
 
     <section class="pop-now">
