About Page Header
Fillimi i faqes about us

--- a/Itineraries.html
+++ b/Itineraries.html
@@ -60,7 +60,7 @@
             <div class="box hidden">
                 <img src="./assets/Barcelona.jpg" alt="Barcelona photo">
                 <h2>A week in Barcelona</h2>
-                <p>Enjoy a vacation in the cosmopolitan capital of Spain’s Catalonia region</p>
+                <p>Spain’s Catalonia region! </p>
                 <button class="view-plan-btn">View Plan</button>
             </div>
             <div class="box hidden">
