--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="AboutUs.css">
 </head>
 <body>
     <header class="header">
@@ -21,6 +22,18 @@
             <button class="signIn">Sign In</button>
             <button class="logIn">Log In</button>
         </div>
-    </header>
+    </header> 
+    <section class="about-header">
+        <section class="about-text">
+            <h1>About Us</h1>
+            <p>We are a travel website that helps you plan your trips more efficiently</p>
+        </section>
+        <section class="ratings">
+            <span>Ratings ⭐ 5.0</span>
+                <img src="/assets/user.png" alt="User 1">
+                <p>20+ reviews</p>
+        </section>
+
+    </section>
 </body>
 </html>
