--- a/AboutUs.html
+++ b/AboutUs.html
@@ -22,6 +22,9 @@
             <button class="signIn">Sign In</button>
             <button class="logIn">Log In</button>
         </div>
+        <button class="hamburgerMenu" aria-label="Toggle menu">
+            ☰
+        </button>
     </header> 
     <section class="about-header">
         <section class="about-text">
@@ -86,6 +89,6 @@
             </div>
         </div>
     </section>
-    
+    <script src="script.js"></script> 
 </body>
 </html>
