--- a/Itineraries.html
+++ b/Itineraries.html
@@ -22,6 +22,9 @@
             <button class="signIn">Sign In</button>
             <button class="logIn">Log In</button>
         </div>
+        <button class="hamburgerMenu" aria-label="Toggle menu">
+            ☰
+        </button>
     </header>
     <section class="pop-now">
         <span><b>People's itineraries</b></span>
@@ -83,6 +86,6 @@
             document.querySelector('.view-more-btn').style.display = 'none';
         }
     </script>
-    
+      <script src="script.js"></script> 
 </body>
 </html>
