Ndryshime design dhe responsivitet
I largova do sene prej about us page + i shtova do sene ne css te itineraries dhe error page per me bo responsive

--- a/ErrorPage.html
+++ b/ErrorPage.html
@@ -35,4 +35,5 @@
         <a href="HomePage.html" class="redirect-button">Home Page</a>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
