--- a/HomePage.html
+++ b/HomePage.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="logoContainer">
-            <img src="/assets/logo.png" alt="localLogo">
+            <img src="./assets/logo.png" alt="localLogo">
         </div>
 
         <nav class="navLinks">
@@ -21,7 +21,7 @@
             <a href="AboutUs.html">About Us</a>
         </nav>
         <div class="registerButtons">
-            <button class="signIn">Sign In</button>
+            <button class="signIn">Sign Up</button>
             <button class="logIn">Log In</button>
         </div>
     </header>
