Log in (validated)
Veq edhe ni foto nbackground mka met me ja qit, niher po i kry tjerat

--- a/ErrorPage.html
+++ b/ErrorPage.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="logoContainer">
-            <img src="/assets/logo.png" alt="localLogo">
+            <img src="./assets/logo.png" alt="localLogo">
         </div>
 
         <nav class="navLinks">
@@ -27,7 +27,7 @@
         </button>
     </header> 
     <div class="errorContainer">
-        <img src="/assets/404.png" alt="404image">
+        <img src="./assets/404.png" alt="404image">
         <div class="explanation">
             <h1>We`re sorry, the Page you are looking for <br> does not exist or is in progress</h1>
             <p>We still have other functioning pages you should check out! We worked really hard on them, explore our website and have fun!</p>
