--- a/Itineraries.html
+++ b/Itineraries.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="logoContainer">
-            <img src="/assets/logo.png" alt="localLogo">
+            <img src="./assets/logo.png" alt="localLogo">
         </div>
 
         <nav class="navLinks">
@@ -32,7 +32,7 @@
             <p>We have some user planned trips that are popular now, right below <br>In addition we also have some staff picked plans we adore, check them out!</p>
         </div>
         <div class="header-images">
-            <img src="/assets/plane.png" alt="plane-image" class="plane-image">
+            <img src="./assets/plane.png" alt="plane-image" class="plane-image">
         </div>
     </section>
     <section class="pop-now">
