--- a/LogIn.html
+++ b/LogIn.html
@@ -8,26 +8,39 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="wrapper">
-        <form action="">
-            <h1>Login</h1>
-            <div class="input-box">
-                <input type="text" placeholder="Email" required>
-                <i class='bx bxs-user'></i>
+    <div class="boarding-pass">
+        <div class="header">
+            <div class="icon">✈️</div>
+            <div class="title">Log In</div>
+            <div class="sub-title">Boarding pass</div>
+        </div>
+        <div class="wrapper">
+            <form action="HomePage.html">
+                <div class="input-box">
+                    <label>Email</label>
+                    <br>
+                    <input type="email" id="email" placeholder="Email" required>
+                    <label>Password</label>
+                    <input type="password" placeholder="Password" required>
+                </div>
+                <div class="remember-me-forgot">
+                    <label><input type="checkbox">Remember me</label>
+                    <a href="#">Forgot password?</a>
+                </div>
+                <button type="submit" class="button">Login</button>
+                <div class="register">
+                    <p>Don't have an account? <a href="#">Register</a></p>
+                </div>
+            </form>
+            <div class="djatht">
+                <div class="details">
+                    <p><strong>From:</strong> Home</p>
+                    <br>
+                    <p><strong>To:</strong> The future</p>
+                </div>
             </div>
-            <div class="input-box">
-                <input type="password" placeholder="Password" required>
-                <i class='bx bxs-lock-alt'></i>
-            </div>
-            <div class="remember-me-forgot">
-                <label><input type="checkbox">Remember me</label>
-                <a href="#">Forgot password?</a>
-            </div>
-            <button type="submit" class="button">Login</button>
-            <div class="register">
-                <p>Don't have an account? <a href="#">Register</a></p>
-            </div>
-        </form>
+        </div>
     </div>
+    <script src="LogIn.js"></script>
 </body>
 </html>
