--- a/HomePage.html
+++ b/HomePage.html
@@ -34,7 +34,7 @@
         <div class="search-container">
         <h1>Travel, like a local</h1>
         <h2>&nbspUse our website to create your perfect <br> &nbspitinerary</h2>
-        <form action="">
+        <form action="ErrorPage.html">
             <div class="search">
                <span class="search-icon material-symbols-outlined">search</span>
                <input class="search-input" type="search" placeholder="Enter your destination">
@@ -73,6 +73,23 @@
         </section>
          <a href="Itineraries.html" class="view-more-btn">View more</a>
     </section>
-    <script src="script.js"></script> 
+    
+    <section id="testimonials-container">
+    <h1 id="testimonials-title">What users have said about us</h1>
+
+    <div class="textboxes">
+        <div class="textboxes-text"></div>
+        <div class="textboxes-text"></div>
+        <div class="textboxes-text"></div>
+    </div>
+
+    <div class="testimonials-pfps">
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+    </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
