--- a/HomePage.html
+++ b/HomePage.html
@@ -78,16 +78,23 @@
     <h1 id="testimonials-title">What users have said about us</h1>
 
     <div class="textboxes">
-        <div class="textboxes-text"></div>
-        <div class="textboxes-text"></div>
-        <div class="textboxes-text"></div>
+        <div class="textboxes-text"><p>Ever since finding out about this website back in 2017, I have used it to plan trips with my family, and we could not be more satisfied</p></div>
+        <div class="textboxes-text"><p>Ever since finding out about this website back in 2017, I have used it to plan trips with my family, and we could not be more satisfied</p></div>
+        <div class="textboxes-text"><p>Ever since finding out about this website back in 2017, I have used it to plan trips with my family, and we could not be more satisfied</p></div>
     </div>
 
     <div class="testimonials-pfps">
-        <div class="placeholder"></div>
-        <div class="placeholder"></div>
-        <div class="placeholder"></div>
+        <div class="placeholder" style="background-image: url(./assets/kit.jpg)"></div>
+        <div class="placeholder" style="background-image: url(./assets/President_Barack_Obama.jpg)"></div>
+        <div class="placeholder" style="background-image: url(./assets/chris.webp)"></div>
     </div>
+    
+    <div class="smallinfo">
+        <p class="smallinfo-text">I defended castle black</p>
+        <p class="smallinfo-text">I am castle black</p>
+        <p class="smallinfo-text">I hate castle black</p>
+    </div>
+
     </section>
 
     <script src="script.js"></script>
