--- a/HomePage.html
+++ b/HomePage.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="registerButtons">
             <button class="signIn">Sign Up</button>
-            <button class="logIn">Log In</button>
+            <button class="logIn"><a href="LogIn.html">Log In</a></button>
         </div>
         <button class="hamburgerMenu" aria-label="Toggle menu">
             ☰
