--- a/HomePage.html
+++ b/HomePage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="HomePage.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="Footer.css">
 </head>
 
 <body>
@@ -94,8 +95,28 @@
         <p class="smallinfo-text">I am castle black</p>
         <p class="smallinfo-text">I hate castle black</p>
     </div>
-
+  
     </section>
+    <footer>
+        <div class="socials">
+          <img class="social-icon" src="./assets/instakuku.png" alt="Instalogo">
+          <img class="social-icon" src="./assets/FB2-logo.png" alt="Xlogo">
+          <img class="social-icon" src="./assets/Youtube-logo.png" alt="Youtubelogo">
+          <img class="social-icon" src="./assets/Linkedin-logo-black.png" alt="Linkedinlogo">
+        </div>
+        <div class="footerContainer">
+          <ul>
+              <li><a href="HomePage.html"><b>Home</b></a></li>
+              <li><a href="Itineraries.html"><b>Itineraries</b></a></li>
+              <li><a href="AboutUs.html"><b>About us</b></a></li>
+              <li><a href=""><b>Our team</b></a></li>
+          </ul>
+        </div>
+        <p id="copyright">&copy; <span id="currentYear"></span> Local. All rights reserved.</p>
+      </footer>
+  <script>
+    document.getElementById("currentYear").textContent = new Date().getFullYear();
+  </script>
 
     <script src="script.js"></script>
 </body>
