--- a/AboutUs.html
+++ b/AboutUs.html
@@ -20,7 +20,7 @@
             <a href="AboutUs.html">About Us</a>
         </nav>
         <div class="registerButtons">
-            <button class="signIn">Sign Up</button>
+            <button class="signIn"><a href="Register.html">Sign Up</a></button>
             <button class="logIn"><a href="LogIn.html">Log In</a></button>
         </div>
         <button class="hamburgerMenu" aria-label="Toggle menu">
