--- a/Itineraries.html
+++ b/Itineraries.html
@@ -96,6 +96,35 @@
             document.querySelector('.view-more-btn').style.display = 'none';
         }
     </script>
+    <section class="pop-now2">
+        <span><b>Our itineraries</b></span>
+            <p>Handpicked getaways from our planning experts</p>
+            <section class="popular-now">
+                <div class="box">
+                    <img src="./assets/berlin.jpg" alt="berlin photo">
+                    <h2>A week in Berlin</h2>
+                    <p>The Grey City</p>
+                    <button class="view-plan-btn">View Plan</button>
+                </div>
+                <div class="box">
+                    <img src="./assets/tokyo.png" alt="Tokyo photo">
+                    <h2>2 weeks in Tokyo</h2>
+                    <p>The Eastern Capital</p>
+                    <button class="view-plan-btn">View Plan</button>
+                </div>
+                <div class="box">
+                    <img src="./assets/lisbon.png" alt="Lisbon photo">
+                    <h2>A weekend in Lisbon</h2>
+                    <p>The City of Seven Hills</p>
+                    <button class="view-plan-btn">View Plan</button>
+                </div>
+                <div class="box">
+                    <img src="./assets/bangkok.jpg" alt="Bangkok photo">
+                    <h2>4 days in Bangkok</h2>
+                    <p>The Big Mango</p>
+                    <button class="view-plan-btn">View Plan</button>
+                </div>
+    </section>
     <footer>
         <div class="socials">
           <img class="social-icon" src="./assets/instakuku.png" alt="Instalogo">
