Changes te vogla style

--- a/HomePage.html
+++ b/HomePage.html
@@ -72,7 +72,9 @@
                 <button class="view-plan-btn">View Plan</button>
             </div>
         </section>
-         <a href="Itineraries.html" class="view-more-btn">View more</a>
+         <a href="Itineraries.html" class="view-more-btn">View more
+            <img src="assets/plane-departure-solid.svg" alt="plane-dep" class="plane-dep">
+         </a>
     </section>
     
     <section id="testimonials-container">
