--- a/Itineraries.html
+++ b/Itineraries.html
@@ -83,7 +83,9 @@
                 <button class="view-plan-btn">View Plan</button>
             </div>
         </section>
-        <button class="view-more-btn" onclick="showMore()">View more</button>
+        <button class="view-more-btn" onclick="showMore()">View more 
+            <img src="assets/plane-up-solid.svg" alt="plane photo" class="plane-down">
+        </button>
 
        
     </section>
