--- a/Register.html
+++ b/Register.html
@@ -52,5 +52,6 @@
             <p>LOCAL<<<<<<<\WEBSITE<<<<<<<<<<<<<\PROJECT<<<<<<<<<<<<<<<<<<<<<\WEB<<<<<<\DESIGN<<<<<<<<\AND<<<<<<<<<<<<\ENGINEERING</p>
         </div>
     </div>
+    <script src="LogIn.js"></script>
 </body>
 </html>
