--- a/Register.html
+++ b/Register.html
@@ -52,6 +52,6 @@
             <p>LOCAL<<<<<<<\WEBSITE<<<<<<<<<<<<<\PROJECT<<<<<<<<<<<<<<<<<<<<<\WEB<<<<<<\DESIGN<<<<<<<<\AND<<<<<<<<<<<<\ENGINEERING</p>
         </div>
     </div>
-    <script src="LogIn.js"></script>
+    <script src="Register.js"></script>
 </body>
 </html>
