--- a/Footer.html
+++ b/Footer.html
@@ -16,9 +16,9 @@
       </div>
       <div class="footerContainer">
         <ul>
-            <li><a href="HomePage.html"><b>Home</b></a></li>
-            <li><a href="Itineraries.html"><b>Itineraries</b></a></li>
-            <li><a href="AboutUs.html"><b>About us</b></a></li>
+            <li><a href="HomePage.php"><b>Home</b></a></li>
+            <li><a href="Itineraries.php"><b>Itineraries</b></a></li>
+            <li><a href="AboutUs.php"><b>About us</b></a></li>
             <li><a href=""><b>Our team</b></a></li>
         </ul>
       </div>
