Ndryshime ne validim js
I ndryshova do sene ne Register validim edhe e ndrova nji prapshtes ne .php

--- a/LogIn.html
+++ b/LogIn.html
@@ -15,7 +15,7 @@
             <div class="sub-title">Boarding pass</div>
         </div>
         <div class="wrapper">
-            <form action="HomePage.html">
+            <form action="HomePage.php">
                 <div class="input-box">
                     <label>Email</label>
                     <br>
