--- a/Register.html
+++ b/Register.html
@@ -15,13 +15,13 @@
             <div class="avatar">
                 <img src="./assets/passport-avatar.jpg" alt="">
             </div>
-            <form>
+            <form id="register-form" action="HomePage.php">
                 <div class="form-group">
                     <label for="name">First Name</label>
                     <input type="text" id="name" placeholder="Enter your first name" required>
                 </div>
                 <div class="form-group">
-                    <label for="surname">Last name</label>
+                    <label for="surname">Last Name</label>
                     <input type="text" id="surname" placeholder="Enter your last name" required>
                 </div>
                 <div class="form-group">
@@ -44,14 +44,19 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <a href="HomePage.html" class="btn-submit">Register</a>
+                    <button type="submit" class="btn-submit">Register</button>
                 </div>
             </form>
-        </div>
+            
         <div class="footer">
             <p>LOCAL<<<<<<<\WEBSITE<<<<<<<<<<<<<\PROJECT<<<<<<<<<<<<<<<<<<<<<\WEB<<<<<<\DESIGN<<<<<<<<\AND<<<<<<<<<<<<\ENGINEERING</p>
         </div>
     </div>
-    <script src="Register.js"></script>
+    <script src="Skript.js">
+    </script>
 </body>
 </html>
+
+
+
+
